  extended template
* Fixed extends bug when extending files in other directories using relative
  paths
* Fixed parsing bug with |modifier:param|modifier2} with:colon after it
* Bug fixed with smarty functions called with no parameters (in compat mode)
* Fixed Dwoo::isArray() check, objects implementing ArrayAccess are now
  valid (thanks to Daniel Cousineau for the patch)

[2008-08-03] 0.9.3
+ Adapters: Added the ZendFramework interface for Dwoo
  (see /Dwoo/Adapters/ZendFramework/README)
+ Plugins: Added the {a} block plugin to generate <a> tags
+ Syntax: Added the ";" token that allows to group multiple instructions in one
  single template tag, example: {if $foo; "> $foo";$bar;/} is equal to:
  {if $foo}> {$foo}{$bar}{/} - This also allow block operations such as:
  {a http://url.com; "Text" /} which equals to {a http://url.com}Text{/}
+ Syntax: Block plugins that you want to call without content can be
  self-closed just like XML tags (e.g. {a "http://url.com" /} ). Be careful not
  to close a non-block plugin like that however, since it will close it's
  parent block
+ Syntax: Static methods can be called using {Class::method()}
+ Syntax: It is now possible to use a plugin's result as an object and call
  a method or read a property from it, i.e. {fetchObject()->doStuff()}
+ API: Added Dwoo_Plugin::paramsToAttributes() utility function to help
  with the creation of compilable xml/html-related plugins
+ API: Added Dwoo->setPluginProxy() and Dwoo_IPluginProxy that allow you to
  hook into the compiler's plugin subsystem to provide your own plugin calls.
  Thanks to Denis Arh for the patch
   => http://forum.dwoo.org/viewtopic.php?id=70
+ API: Dwoo->addPlugin() has a third parameter to mark a plugin as compilable
+ Compiler supports method calls into a method call's parameters
* Dwoo_Compiler::implode_r is now public/static so it can be used in other
  places such as plugin proxies
* Syntax: Math expressions in strings are now only allowed when the entire