@@ -3,8 +3,22 @@
 /**
  * PluginProxy class for Zend View
  *
- * @package		 Dwoo
- * @author		 Denis Arh <denis@arh.cc>
+ * This software is provided 'as-is', without any express or implied warranty.
+ * In no event will the authors be held liable for any damages arising from the
+ * use of this software.
+ *
+ * This file is released under the LGPL
+ * "GNU Lesser General Public License"
+ * More information can be found here:
+ * {@link http://www.gnu.org/copyleft/lesser.html}
+ *
+ * @author	   Denis Arh <denis@arh.cc>
+ * @copyright  Copyright (c) 2008, Denis Arh
+ * @license    http://www.gnu.org/copyleft/lesser.html  GNU Lesser General Public License
+ * @link       http://dwoo.org/
+ * @version    1.0.0
+ * @date       2008-08-17
+ * @package    Dwoo
  */
 class Dwoo_Adapters_ZendFramework_PluginProxy implements Dwoo_IPluginProxy
 {
